--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MavroLang</title>
+    <title>Mavro²</title>
     <style>
         .header {
             background-image: linear-gradient(to bottom right, rgb(133, 166, 229), rgb(21, 95, 232));
@@ -26,22 +26,21 @@
     </style>
 </head>
 <body>
-    <dir class="text">
-        <dir class="header">
+    <div class="text">
+        <div class="header">
             <br>
             <br>
-            <h1 style="font-size: 5em;">MavroLang</h1>
+            <h1 style="font-size: 5em;">Mavro²</h1>
             <p style="font-size: 2em;"><b>Simple, beautiful, powerful.</b></p>
             <br>
-        </dir>
-        <h1 style="color: black;"><b>Install MavroLang now on your Windows device, for free.</b></h1>
+        </div>
+        <h1 style="color: black;"><b>Install Mavro² now on your Windows or Linux device, for free.</b></h1>
         <h2 style="font-family: 'Courier New', Courier, monospace; color: black;">
-            pip install mavro
+            <a href="https://github.com/fossil-org/mavrosq/blob/main/README.md>Click here to learn how to install Mavro²</a>
         </h2>
-        <dir class="buttons">
-            <a href="https://pypi.org/project/mavro"><button>Mavro on PyPI</button></a>
-            <a href="https://gtihub.com/astridot/mavro"><button>Mavro on GitHub</button></a>
-        </dir>
-    </dir>
+        <div class="buttons">
+            <a href="https://github.com/fossil-org/mavrosq"><button>Mavro² on GitHub</button></a>
+        </div>
+    </div>
 </body>
 </html>
