--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
         <h1 style="color: black;"><b>Install Mavro² now on your Windows or Linux device, for free.</b></h1>
         <h2 style="font-family: 'Courier New', Courier, monospace; color: black;">
-            <a href="https://github.com/fossil-org/mavrosq/blob/main/README.md>Click here to learn how to install Mavro²</a>
+            <a href="https://github.com/fossil-org/mavrosq/blob/main/README.md">Click here to learn how to install Mavro²</a>
         </h2>
         <div class="buttons">
             <a href="https://github.com/fossil-org/mavrosq"><button>Mavro² on GitHub</button></a>
