--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mavro²</title>
+    <title>msq</title>
     <style>
         .header {
             background-image: linear-gradient(to bottom right, rgb(133, 166, 229), rgb(21, 95, 232));
@@ -30,16 +30,16 @@
         <div class="header">
             <br>
             <br>
-            <h1 style="font-size: 5em;">Mavro²</h1>
+            <h1 style="font-size: 5em;">msq</h1>
             <p style="font-size: 2em;"><b>Simple, beautiful, powerful.</b></p>
             <br>
         </div>
-        <h1 style="color: black;"><b>Install Mavro² now on your Windows or Linux device, for free.</b></h1>
+        <h1 style="color: black;"><b>Install msq now on your Windows or Linux device, for free.</b></h1>
         <h2 style="font-family: 'Courier New', Courier, monospace; color: black;">
-            <a href="https://github.com/fossil-org/mavrosq/blob/main/README.md">Click here to learn how to install Mavro²</a>
+            <a href="https://github.com/fossil-org/mavrosq/blob/main/README.md">Click here to learn how to install msq</a>
         </h2>
         <div class="buttons">
-            <a href="https://github.com/fossil-org/mavrosq"><button>Mavro² on GitHub</button></a>
+            <a href="https://github.com/fossil-org/mavrosq"><button>msq on GitHub</button></a>
         </div>
     </div>
 </body>
